# asap_app_imgui

./: .clang-format  .clang-tidy  .clangd.in  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .runsettings  .travis.yml  .versionrc.json  AUTHORS  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  SECURITY.md  appveyor.yml  asap-config.cmake  requirements.txt
.devcontainer/: .p10k.zsh  .zshrc  Dockerfile  devcontainer.json
.github/workflows/: all-dev-builds.yml  cmake-build.yml  gh-pages.yml  linux-build.yml  macos-builds.yml  ubuntu-builds.yml  windows-build.yml  windows-builds.yml
asap_app_imgui_master/_doctrees/: changelog.doctree  environment.pickle  index.doctree  license.doctree  version.doctree
asap_app_imgui_master/html/: .buildinfo  changelog.html  genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js  version.html
cmake/: AsapInstall.cmake  AsapTargets.cmake  BuildHelpers.cmake  CPM.cmake  ClangFormat.cmake  ClangTidy.cmake  CodeCoverage.cmake  CompileDefinitions.cmake  CompileOptions.cmake  ComponentInstall.cmake  CppCheck.cmake  DownloadProject.cmake  DoxGeneration.cmake  FasterBuild.cmake  FetchGoogleTest.cmake  FindSphinx.cmake  FindValgrind.cmake  Format.cmake  GenerateTemplateExportHeader.cmake  GetGitRevisionDescription.cmake  GoogleSanitizers.cmake  LanguageStandards.cmake  ListTargets.cmake  LogHelpers.cmake  ResetInitialCompilerOptions.cmake  RuntimeDependencies.cmake  SphinxGeneration.cmake  TestTargets.cmake  Valgrind.cmake  standard-version-updater.js
cmake/scripts/: standard-version-updater.js
common/: .gitignore  CMakeLists.txt  README.md
common/cmake/: BuildHelpers.cmake  CompileOptions.cmake  CppCheck.cmake  DoxGeneration.cmake  GenerateTemplateExportHeader.cmake  GoogleSanitizers.cmake  Valgrind.cmake
common/doc/: api.rst  conf.py.in  index.rst  license.rst  usage.rst  version.rst
common/doc/api/: compilers.rst  contract.rst  cpp.rst  flags.rst  fsm.rst  mixin.rst  overload.rst  platform.rst
common/include/common/: assert.h  common.h  compilers.h  config.h.in  flag_ops.h  fsm.h  logging.h  mixin.h  non_copiable.h  overload.h  platform.h  singleton.h
common/include/common/traits/: logical.h
common/include/contract/: contract.h
common/include/contract/ut/: framework.h  gtest.h
common/src/: assert.cpp  common.cpp  contract.cpp  fsm.cpp  logging.cpp  place_holder_to_be_removed.cpp
common/test/: CMakeLists.txt  assert_test.cpp  flag_ops_test.cpp  fsm_example_test.cpp  fsm_test.cpp  logging_test.cpp  main.cpp  overload_test.cpp  singleton_test.cpp  traits_logical_test.cpp
common/test/contract/: CMakeLists.txt  contract_handlers_test.cpp  contract_ut_gtest_test.cpp  contracts_audit_test.cpp  contracts_default_test.cpp  contracts_honored_test.cpp  contracts_off_test.cpp  test_helper.cpp  test_helper.h
common/test/mixin/: CMakeLists.txt  mixin_chained_init_test.cpp  mixin_curry_test.cpp  mixin_interfaces_test.cpp  mixin_top_test.cpp
contract/: CMakeLists.txt  config.cmake.in  config.pc.in
contract/doc/: api.rst  conf.py.in  index.rst  version.rst
contract/src/: contract.cpp  contract_ut.cpp
contract/test/: CMakeLists.txt  contract_handlers_test.cpp  contracts_audit_test.cpp  contracts_default_test.cpp  contracts_honored_test.cpp  contracts_off_test.cpp  test_helper.cpp  test_helper.h
contract/test/ut/: CMakeLists.txt  contract_ut_gtest_test.cpp
deploy/: CMakeLists.txt  TODO.md
deploy/ubuntu-ppa/: recipe.txt
doc/: build.rst  common_conf.py.in  conf.py  conf.py.in  customdoxygen.css  devflow.rst  footer.html  header.html  index.html  index.rst  license.rst  master_conf.py.in  module_conf.py.in  modules.rst  usage.rst  version.rst
doc/01-getting-started/: customizing.rst  devenv.rst  get-the-code.rst  get-updates.rst  index.rst  structure.rst  useful-commands.rst
doc/02-developer-guides/: devflow.rst  index.rst  sphinx-doc.rst
doc/02-project-development/: build.rst  devflow.rst  index.rst  modules.rst  third_party.rst
doc/03-documentation/: doxygen-doc.rst  index.rst  sphinx-doc.rst
doxygen/: Doxyfile.in  footer.html  header.html
fsm/: CMakeLists.txt
fsm/doc/: api.rst  (+3 more)
fsm/test/: CMakeLists.txt  fsm_example_test.cpp  fsm_test.cpp  main.cpp  state_machine_error_test.cpp
imgui/: CMakeLists.txt  README.md  config.pc.in
imgui/include/: imgui_user_config.h
imgui/include/KHR/: khrplatform.h
imgui/include/glad/: gl.h
imgui/src/glad/: gl.cpp
logging/: CMakeLists.txt  README.md  config.pc.in
logging/doc/: api.rst  conf.py.in  index.rst  version.rst
logging/doc/api/: logging.rst
logging/include/logging/: logging.h
logging/src/: logging.cpp
logging/test/: CMakeLists.txt  logging_test.cpp  main.cpp
main/: CMakeLists.txt
main/config/: display.toml  display.yaml  imgui_dock.layout  logging.toml  logging.yaml  theme.toml  theme.yaml
main/src/: abstract_application.h  application.cpp  application.h  application_base.cpp  application_base.h  config.cpp  config.h  example_application.cpp  example_application.h  imgui_runner.cpp  imgui_runner.h  linmath.h  main.cpp  runner_base.cpp  runner_base.h  shader.h
main/src/app/: application.h  imgui_runner.cpp  imgui_runner.h
main/src/config/: config.cpp  config.h
main/src/shaders/: core.frag  core.vs
main/src/ui/: application_base.cpp  application_base.h
main/src/ui/fonts/: Inconsolata-Bold.cpp  Inconsolata-Regular.cpp  Roboto-Black.cpp  Roboto-BlackItalic.cpp  Roboto-Bold.cpp  Roboto-BoldItalic.cpp  Roboto-Italic.cpp  Roboto-Light.cpp  Roboto-LightItalic.cpp  Roboto-Medium.cpp  Roboto-MediumItalic.cpp  Roboto-Regular.cpp  Roboto-Thin.cpp  Roboto-ThinItalic.cpp  fonts.h  material_design_icons.cpp  material_design_icons.h
main/src/ui/log/: sink.cpp  sink.h
main/src/ui/style/: theme.cpp  theme.h
templates/: template_api.h.in  template_msvc_api.h  template_msvc_api.h.in  version.h.in
textwrap/: CMakeLists.txt  README.md
tools/version-info/: .gitignore  CMakeLists.txt  README.md
tools/version-info/src/: main.cpp.in
(+45 files in other folders)
